welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: not found: value max
    if (nums(i) >= max) {
                   ^max2Value:11: error: not found: value min
      min = max
      ^max2Value:12: error: not found: value max
      max = nums(i)
      ^max2Value:14: error: not found: value min
    if (nums(i) > min && nums(i) < max) {
                  ^max2Value:14: error: not found: value max
    if (nums(i) > min && nums(i) < max) {
                                   ^max2Value:15: error: not found: value min
      min = nums(i)  
      ^max2Value:18: error: not found: value min
  return min
         ^